--- a/build.gradle
+++ b/build.gradle
@@ -283,6 +283,10 @@ configure(allprojects) { project ->
 			cacheChangingModulesFor 0, "seconds"
 		}
 		repositories {
+			maven {
+				name 'alimaven'
+				url 'http://maven.aliyun.com/nexus/content/repositories/central/'
+			}
 			mavenCentral()
 			maven { url "https://repo.spring.io/libs-spring-framework-build" }
 			maven { url "https://repo.spring.io/snapshot" } // Reactor and RSocket
