--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 version=5.3.4-SNAPSHOT
-org.gradle.jvmargs=-Xmx1536M
+org.gradle.jvmargs=-Xms2048M -Xmx2048m -XX:MaxHeapSize=2048m
 org.gradle.caching=true
 org.gradle.parallel=true
 kotlin.stdlib.default.dependency=false
